# survey-exporter

./: .gitignore  README.md  build.sh  export_requirements.sh  pyproject.toml  requirements.txt  setup.py  survey_exporter.spec  survey_gui.spec
.github/workflows/: build-windows.yml
survey_exporter/: main.py  survey_gui.py
tests/: test_main.py
