[tool.poetry]
name = "survey-exporter"
version = "0.1.0"
description = ""
authors = ["Kit Yan Choi <kit@kychoi.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pyinstaller = "^6.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
